--- a/styles/index.css
+++ b/styles/index.css
@@ -51,5 +51,13 @@ html{
   margin-bottom: 20px;
   outline: none;
   border: none;
-
+  height: 200px;
  }
+ #modal-content{
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  height: 80%;
+  width: 70%;  
+}
